feat: :hammer: update user profile
